[gd_scene load_steps=30 format=2]

[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Walk/walk5.png" type="Texture" id=1]
[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Walk/walk1.png" type="Texture" id=2]
[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Attack_Extra/attack_extra2.png" type="Texture" id=3]
[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Walk/walk6.png" type="Texture" id=4]
[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Attack_Extra/attack_extra0.png" type="Texture" id=5]
[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Walk/walk2.png" type="Texture" id=6]
[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Walk/walk4.png" type="Texture" id=7]
[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Attack_Extra/attack_extra1.png" type="Texture" id=8]
[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Attack_Extra/attack_extra3.png" type="Texture" id=9]
[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Attack_Extra/attack_extra4.png" type="Texture" id=10]
[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Attack_Extra/attack_extra5.png" type="Texture" id=11]
[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Attack_Extra/attack_extra6.png" type="Texture" id=12]
[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Walk/walk3.png" type="Texture" id=13]
[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Death/death1.png" type="Texture" id=14]
[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Death/death7.png" type="Texture" id=15]
[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Death/death2.png" type="Texture" id=16]
[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Death/death3.png" type="Texture" id=17]
[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Death/death5.png" type="Texture" id=18]
[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Death/death4.png" type="Texture" id=19]
[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Death/death8.png" type="Texture" id=20]
[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Death/death10.png" type="Texture" id=21]
[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Death/death9.png" type="Texture" id=22]
[ext_resource path="res://res/creat/craftpix-891165-assassin-mage-viking-free-pixel-art-game-heroes/PNG/Mage/Death/death6.png" type="Texture" id=23]
[ext_resource path="res://Data/Mage.gd" type="Script" id=24]
[ext_resource path="res://Data/DamageArea.tscn" type="PackedScene" id=25]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 23 ), ExtResource( 15 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 37.5, 53 )

[node name="Mage" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 24 )

[node name="walk" type="AnimatedSprite" parent="."]
position = Vector2( -44, -51 )
scale = Vector2( 2.05469, 2.05469 )
frames = SubResource( 1 )
frame = 2
flip_h = true

[node name="attack" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )
frame = 5
flip_h = true

[node name="death" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 3 )
frame = 8
flip_h = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -4, -8.5 )
scale = Vector2( 4, 5.55 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.5, -6 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[node name="DamageArea" parent="." instance=ExtResource( 25 )]
position = Vector2( -78, -2 )

[connection signal="animation_finished" from="attack" to="." method="_on_attack_animation_finished"]
[connection signal="animation_finished" from="death" to="." method="_on_death_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
